# kan-yi-dao

./: .env.example  .gitignore  .skip-template  LICENSE  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  README.md  debug_checksum.py  final_debug.py  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-test.txt  requirements.txt  run_tests.py  setup.py
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
assets/: README.md
docs/: PRD.MD  README.md  UI.md  deepseek_guide.md  installation.md  technical_debt_prevention.md  technical_debt_records.md  注意事项.md
kanyidao_env/: pyvenv.cfg
scripts/: CLAUDE.md  clean.py  run_game.py
src/: __init__.py
src/ai/: __init__.py  ai_factory.py  ai_interface.py  ai_manager.py  context_engine.py  deepseek_ai.py  llm_ai.py  rule_based_ai.py
src/config/: __init__.py  settings.py
src/game/: __init__.py  data_manager.py  effects.py  enemy.py  font_manager.py  game_constants.py  main.py  player.py  sound_manager.py  text_localization.py  ui.py
test_reports/: integration_results.xml  unit_results.xml
tests/: __init__.py  conftest.py  test_chinese_text_rendering.py
tests/helpers/: __init__.py  assertions.py  factories.py  mock_data.py  path_utils.py
tests/test_ai/: __init__.py  test_ai_agent.py  test_deepseek_ai.py
tests/test_game/: __init__.py  test_effects.py  test_enemy.py  test_player.py
tests/test_integration/: __init__.py  test_game_integration.py
